--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
       <p>ダミーサイトへようこそ</p>
     </div>
 
+    <h2>お問い合わせ</h2>
+    <form>
+      <label for="name">お名前<span class="required">*必須</span></label>
+      <input type="text" name="name" id="name" placeholder="例）田中 太郎" required/>
+      <label for="prefSelect">お住いの都道府県<span class="required">*必須</span></label>
+      <select name="prefectures" id="prefSelect" required>
+        <option value="">選択してください</option>
+        <option value="北海道">北海道</option>
+        <option value="青森県">青森県</option>
+        <option value="岩手県">岩手県</option>
+      </select>
+      <label for="citySelect">お住まいの市区町村<span class="required">*必須</span></label>
+      <select name="city" id="citySelect" required>
+        <option value="">選択してください</option>
+      </select>
+      <label for="email">メールアドレス<span class="required">*必須</span></label>
+      <input type="email" id="email" placeholder="例）abcd123@example.com" required/>
+      <label for="tel">電話番号</label>
+      <input type="tel" id="tel" placeholder="例）09012345678"/>
+      <input type="submit" />
+    </form>
+
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="./js/index.js"></script>
   </body>
