--- a/index.html
+++ b/index.html
@@ -45,25 +45,33 @@
     </div>
 
     <h2>お問い合わせ</h2>
-    <form>
+    <form method="get" action="thanks.html">
       <label for="name">お名前<span class="required">*必須</span></label>
-      <input type="text" name="name" id="name" placeholder="例）田中 太郎" required/>
+      <input class="required_form" type="text" name="name" id="name" placeholder="例）田中 太郎" />
+      <span class="required_message">この項目は必須です</span>
+
       <label for="prefSelect">お住いの都道府県<span class="required">*必須</span></label>
-      <select name="prefectures" id="prefSelect" required>
+      <select class="required_form" name="prefectures" id="prefSelect">
         <option value="">選択してください</option>
         <option value="北海道">北海道</option>
         <option value="青森県">青森県</option>
         <option value="岩手県">岩手県</option>
       </select>
+      <span class="required_message">この項目は必須です</span>
+
       <label for="citySelect">お住まいの市区町村<span class="required">*必須</span></label>
-      <select name="city" id="citySelect" required>
+      <select class="required_form" name="city" id="citySelect">
         <option value="">選択してください</option>
       </select>
+      <span class="required_message">この項目は必須です</span>
+
       <label for="email">メールアドレス<span class="required">*必須</span></label>
-      <input type="email" id="email" placeholder="例）abcd123@example.com" required/>
+      <input class="required_form" type="email" id="email" placeholder="例）abcd123@example.com" />
+      <span class="required_message">この項目は必須です</span>
+
       <label for="tel">電話番号</label>
       <input type="tel" id="tel" placeholder="例）09012345678"/>
-      <input type="submit" />
+      <input class="submit" type="submit" />
     </form>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
