--- a/thanks.html
+++ b/thanks.html
@@ -1,1 +1,51 @@
-送信ありがとうございました
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+
+  <body>
+    <ul id="accordionMenu">
+      <li>
+        <a href="#">我が社について</a>
+      </li>
+      <li>
+        <a href="#">サービス</a>
+      </li>
+      <li>
+        <a href="#">お問い合わせ</a>
+      </li>
+    </ul>
+    <header>
+      <div class="header_content">
+        <a href="#">ダミーサイト</a>
+        <ul id="navMenu">
+          <li>
+            <a href="#">我が社について</a>
+          </li>
+          <li>
+            <a href="#">サービス</a>
+          </li>
+          <li>
+            <a href="#">お問い合わせ</a>
+          </li>
+        </ul>
+        <button class="hamburger_content" id="hamburgerBtn" aria-label="メニューを開く">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
+    </header>
+    <body>
+      <p class="thanks_message">お問い合わせありがとうございました</p>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/form-validate.js"></script>
+    <script src="./js/pref-city.js"></script>
+  </body>
+</html>
