--- a/thanks.html
+++ b/thanks.html
@@ -21,7 +21,7 @@
     </ul>
     <header>
       <div class="header_content">
-        <a href="#">ダミーサイト</a>
+        <a href="/">ダミーサイト</a>
         <ul id="navMenu">
           <li>
             <a href="#">我が社について</a>
@@ -44,8 +44,10 @@
       <p class="thanks_message">お問い合わせありがとうございました</p>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/AccordionMenu.js"></script>
     <script src="./js/form-validate.js"></script>
     <script src="./js/pref-city.js"></script>
+    <script src="./js/scroll.js"></script>
+    <script src="./js/serviceBtn.js"></script>
   </body>
 </html>
