about_content p 記述修正。css @media 記述順修正。

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 
     <div class="about_content">
       <h2>我が社について</h2>
-      <p>TechEliteは、顧客に自身をもって<span class="underber_text">「納品」</span>が</p>
-      <p>できるレベルのLPが作れるようになります。</p>
+      <p>TechEliteは、顧客に自身をもって<span class="underber_text">「納品」</span>ができるレベルのLPが作れるようになります。</p>
     </div>
     <div class="service_content">
       <h2>サービス</h2>
